tests/typing/union_types_simple_faulty.sy
f :: fn a:bool -> int | void do
    if a do
        ret 1
    end else do
        ret "hello!"
    end
end

g :: fn a:bool -> int | (bool, bool) do
    if a do
        ret 1
    end else do
        ret (true, 1.0)
    end
end

start :: fn do
    0 <=> f' true
    0.0 <=> f' false
    ("hello!", "there") <=> g' false
    1 <=> g' true
    f(true) <=> g(true)
end
// error: $BinOp { .. }
// error: $BinOp { .. }
